# UDP-Server-Client

Image and Sender/: CMakeLists.txt  Makefile  libraspicam.so.0.1.9  libraspicam_cv.so.0.1  udp_streamer.cc
